--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.15.4",
     "next": "^3.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -13,6 +14,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "next"
+    "dev": "node server.js"
   }
 }
