--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-env": "^5.0.5",
     "express": "^4.15.4",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^3.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^2.5.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "next start -p $PORT",
+    "build": "next build",
+    "deploy": "cross-env PORT=9002 npm start",
+    "deploy1": "cross-env PORT=9001 npm start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "node server.js"
